creating basic login and register, adding migrations, fake jwt tokens for dev and testing, adding auth service, adding user controller, adding dtos for register and login endpoints

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"DefaultConnection": "Data Source=ecosimulator.db"
+	},
+	"Jwt": {
+		"Key": "J4Ff*6Pt3BcGnpzA",
+		"Issuer": "m7@K9Jd*G$5rEh@2"
+	}
 }
